--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,13 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+isRunAlone=false
+ANDROID_BUILD_MIN_SDK_VERSION=14
+ANDROID_BUILD_TARGET_SDK_VERSION=26
+ANDROID_BUILD_TOOLS_VERSION=28.0.3
+ANDROID_BUILD_SDK_VERSION=26
+APPCOMPAT_VERSION=26.1.0
+ANDROID_COMPILE_SDK_VERSION=28
+ANDROID_MIN_SDK_VERSION=19
+ANDROID_TARGET_SDK_VERSION=26
+
