--- a/serviceLib/build.gradle
+++ b/serviceLib/build.gradle
@@ -1,16 +1,26 @@
-apply plugin: 'com.android.library'
+if (isRunAlone.toBoolean()){
+    apply plugin: 'com.android.application'
+}else {
+    apply plugin: 'com.android.library'
+}
 apply plugin: 'com.github.dcendents.android-maven'
-group = 'com.github.attosoft'
+group='com.github.attosoft'
 
 android {
-    compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
-    buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
-
+    if (isRunAlone.toBoolean()) {
+        compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
+        buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
+    }else {
+        compileSdkVersion 28
+        buildToolsVersion "28.0.3"
+    }
     defaultConfig {
         versionCode 1
         versionName "1.0"
-        minSdkVersion 1
-        targetSdkVersion project.ANDROID_BUILD_TARGET_SDK_VERSION
+        if (isRunAlone.toBoolean()) {
+            minSdkVersion 1
+            targetSdkVersion project.ANDROID_BUILD_TARGET_SDK_VERSION
+        }
     }
 
     buildTypes {
