--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation project(":serviceLib")
-//    implementation 'com.github.attosoft:ServiceManager:v0.0.2'
+//    implementation project(":serviceLib")
+    implementation 'com.github.attosoft:ServiceManager:v0.0.3'
 }
