--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 //    implementation project(":serviceLib")
-    implementation 'com.github.attosoft:ServiceManager:master-SNAPSHOT'
+    implementation 'com.github.attosoft:ServiceManager:1.0.0_release-SNAPSHOT'
 }
