--- a/serviceLib/build.gradle
+++ b/serviceLib/build.gradle
@@ -1,22 +1,24 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
+repositories {
+    mavenCentral()
+    google()
+    jcenter()
+    maven { url "https://jitpack.io" }
+}
+group = 'com.github.attosoft'
+version = '1.0'
 
 android {
-//    if (isRunAlone.toBoolean()) {
-//        compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
-//        buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
-//    }else {
+
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
-//    }
+
     defaultConfig {
         versionCode 1
-        versionName "1.0"
-//        if (isRunAlone.toBoolean()) {
+        versionName version
         minSdkVersion 15
-        targetSdkVersion 26
-//            targetSdkVersion project.ANDROID_BUILD_TARGET_SDK_VERSION
-//        }
+        targetSdkVersion 28
     }
 
     buildTypes {
@@ -25,38 +27,42 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    lintOptions {
+        abortOnError false
+    }
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+        androidTest.java.srcDirs += 'src/androidTest/kotlin'
+        androidTest.resources.srcDirs += 'src/androidTest/res'
+    }
 }
-//// type显示指定任务类型或任务, 这里指定要执行Javadoc这个task,这个task在gradle中已经定义
-//task androidJavadocs(type: Javadoc) {
-//    // 设置源码所在的位置
-//    source = android.sourceSets.main.java.sourceFiles
-//}
-//
-//// 生成javadoc.jar
-//task androidJavadocsJar(type: Jar) {
-//    // 指定文档名称
-//    classifier = 'javadoc'
-//    from androidJavadocs.destinationDir
-//}
-//
-//// 生成sources.jar
-//task androidSourcesJar(type: Jar) {
-//    classifier = 'sources'
-//    from android.sourceSets.main.java.sourceFiles
-//}
-//
-//task classesJar(type: Jar) {
-//    from "$buildDir/intermediates/classes/release"
-//}
-//
-//// 产生相关配置文件的任务
-//artifacts {
-//    archives classesJar
-//    archives androidSourcesJar
-//    archives androidJavadocsJar
-//}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     compileOnly 'com.android.support:appcompat-v7:28.0.0'
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from android.sourceSets.main.java.sourceFiles
+}
+
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.sourceFiles
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+task classesJar(type: Jar) {
+    from "$buildDir/intermediates/classes/release"
+}
+
+artifacts {
+    archives classesJar
+    archives javadocJar
+    archives sourcesJar
 }
