--- a/serviceLib/build.gradle
+++ b/serviceLib/build.gradle
@@ -39,7 +39,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    compileOnly 'com.android.support:appcompat-v7:28.0.0'
+    compileOnly 'androidx.annotation:annotation:1.1.0'
 }
 
 task sourcesJar(type: Jar) {
